Segunda version con Sass

--- a/Pages/preguntasfrecuentes.html
+++ b/Pages/preguntasfrecuentes.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="keywords" content="Consultas, Dudas, FAQ, Frequent asked questions">
+    <meta name="description" content="Esta pagina cuenta con información sobre todas las dudas y sus respuestas y/o sus soluciones.">
+    <title>Dudas sobre nustra pagina de Moda</title>
     <link rel="shortcut icon" href="../Imagenes/shutterstock_1197572524.jpg">
-    <link rel="stylesheet" href="../estilo.css">
+    <link rel="stylesheet" href="../css/prueba.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
 
@@ -22,7 +24,7 @@
                     <li><a href="galeria.html">Galería</a></li>
             <li><a href="pasarela.html">Pasarelas</a></li>
             <li><a href="proximosshows.html">Próximos shows</a></li>
-            <li><a href="preguntas frecuentes.html">Preguntas frecuentes</a></li>
+            <li><a href="preguntasfrecuentes.html">Preguntas frecuentes</a></li>
 
                 </ul>
 
