--- a/Pages/proximosshows.html
+++ b/Pages/proximosshows.html
@@ -63,19 +63,23 @@
                     <option value="Consulta">Consulta</option>
                     <option value="Información">Información</option>
                     <option value="Petición">Petición</option>
-                    </select><br>
+                    </select>
+			<br>
 
                     <label for="Nombre">Nombre</label>   
                     <input type="name" placeholder="Ingrese su Nombre y Apellido" id="Nombre"><br>
 
                     <label for="Email">Email</label>
-                    <input type="email" placeholder="Ingrese su mail" id="Email"><br>
+                    <input type="email" placeholder="Ingrese su mail" id="Email">
+			<br>
 
                     <label for="Fecha">Fecha</label>
-                    <input type="date" id="Fecha"><br>
+                    <input type="date" id="Fecha">
+			<br>
 
                     <label for="Consulta">Consulta</label>
-                    <textarea name="" id="" cols="30" rows="10" id="Consulta"></textarea><br>
+                    <textarea name="" id="" cols="30" rows="10" id="Consulta"></textarea>
+			<br>
 
                     <div><p>¿Sos mayor de edad?</p>
                         <div>Si
@@ -83,7 +87,8 @@
                         </div>
                     <div>No
                         <input type="radio" name="edad" value="No">
-                    </div><br>
+                    </div>
+			<br>
 
         
 
